# vox2dem

./: License.md  README.md
sample/: test.binvox
sample/result/meta_binvox/: test.txt
sample/result/meta_cropped/: test.xml
src/: CMakeLists.txt  main.cu
